# yup

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  classes.html  classyup_1_1ADSR-members.html  classyup_1_1ADSR.html  classyup_1_1AbstractFifo-members.html  classyup_1_1AbstractFifo.html  classyup_1_1AbstractFifo_1_1ScopedReadWrite-members.html  classyup_1_1AbstractFifo_1_1ScopedReadWrite.html  classyup_1_1ActionBroadcaster-members.html  classyup_1_1ActionBroadcaster.html  classyup_1_1ActionListener-members.html  classyup_1_1ActionListener.html  classyup_1_1AffineTransform-members.html  classyup_1_1AffineTransform.html  classyup_1_1AndroidDocument-members.html  classyup_1_1AndroidDocument.html  classyup_1_1AndroidDocumentInfo-members.html  classyup_1_1AndroidDocumentInfo.html  classyup_1_1AndroidDocumentInputSource-members.html  classyup_1_1AndroidDocumentInputSource.html  classyup_1_1AndroidDocumentInputSource__inherit__graph.map  classyup_1_1AndroidDocumentInputSource__inherit__graph.md5  classyup_1_1AndroidDocumentIterator-members.html  classyup_1_1AndroidDocumentIterator.html  classyup_1_1AndroidDocumentPermission-members.html  classyup_1_1AndroidDocumentPermission.html  classyup_1_1ApplicationTheme-members.html  classyup_1_1ApplicationTheme.html  classyup_1_1ApplicationTheme__inherit__graph.map  classyup_1_1ApplicationTheme__inherit__graph.md5  classyup_1_1Array-members.html  classyup_1_1Array.html  classyup_1_1ArrayAllocationBase-members.html  (+1171 more)
example/: CMakeLists.txt  fiddle_context_gl.cpp  main.mm
example/data/: car_interface.riv
examples/app/: CMakeLists.txt  fiddle_context_metal.mm  main.cpp  main.mm
examples/console/: CMakeLists.txt  main.cpp
python/: .gitignore  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
python/demos/: yup_init.py  yup_o_matic.py
python/tests/: __init__.py  common.py  conftest.py  utilities.py
python/tools/: ArchivePythonStdlib.py
standalone/app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/juce_audio_basics/: juce_AudioSampleBuffer.cpp  juce_FloatVectorOperations.cpp  juce_MidiBuffer.cpp  juce_MidiMessage.cpp
tests/juce_audio_devices/: juce_AudioDeviceManager.cpp
tests/juce_core/: juce_AbstractFifo.cpp  juce_ArrayBase.cpp  juce_Atomic.cpp  juce_Base64.cpp  juce_BigInteger.cpp  juce_CharacterFunctions.cpp  juce_ChildProcess.cpp  juce_DynamicObject.cpp  juce_ElementComparator.cpp  juce_EnumHelpers.cpp  juce_Enumerate.cpp  juce_FixedSizeFunction.cpp  juce_FlagSet.cpp  juce_GZIPCompressorOutputStream.cpp  juce_GZIPDecompressorInputStream.cpp  juce_HashMap.cpp  juce_HighResolutionTimer.cpp  juce_Identifier.cpp  juce_JSON.cpp  juce_JSONSerialisation.cpp  juce_JSONUtils.cpp  juce_JavaScript.cpp  juce_JavascriptEngine.cpp  juce_LinkedListPointer.cpp  juce_ListenerList.cpp  juce_LocalisedStrings.cpp  juce_MetaProgramming.cpp  juce_ObjCHelpers.mm  juce_Optional.cpp  juce_OwnedArray.cpp  juce_PlatformDefs.cpp  juce_PropertySet.cpp  juce_Random.cpp  juce_ReferenceCountedArray.cpp  juce_ReferenceCountedObject.cpp  juce_Result.cpp  juce_ResultValue.cpp  juce_SHA1.cpp  juce_ScopeGuard.cpp  juce_SharedResourcePointer.cpp  (+14 more)
tests/yup_audio_basics/: yup_ADSR.cpp  yup_AudioChannelSet.cpp  yup_AudioDataConverters.cpp  yup_AudioPlayHead.cpp  yup_AudioProcessLoadMeasurer.cpp  yup_BufferingAudioSource.cpp  yup_ChannelRemappingAudioSource.cpp  yup_Decibels.cpp  yup_FloatVectorOperations.cpp  yup_IIRFilter.cpp  yup_Interpolators.cpp  yup_MPEInstrument.cpp  yup_MPEMessages.cpp  yup_MPENote.cpp  yup_MPESynthesiserBase.cpp  yup_MPEUtils.cpp  yup_MPEValue.cpp  yup_MPEZoneLayout.cpp  yup_MemoryAudioSource.cpp  yup_MidiBuffer.cpp  yup_MidiDataConcatenator.cpp  yup_MidiFile.cpp  yup_MidiKeyboardState.cpp  yup_MidiMessage.cpp  yup_MidiMessageSequence.cpp  yup_MidiRPN.cpp  yup_MixerAudioSource.cpp  yup_ResamplingAudioSource.cpp  yup_Reverb.cpp  yup_ReverbAudioSource.cpp  yup_SmoothedValue.cpp  yup_Synthesiser.cpp  yup_ToneGeneratorAudioSource.cpp  yup_UMP.cpp
tests/yup_audio_devices/: yup_AudioDeviceManager.cpp
tests/yup_audio_formats/: yup_AudioFormatManager.cpp  yup_WavAudioFormat.cpp  yup_WaveAudioFormat.cpp
tests/yup_core/: yup_AbstractFifo.cpp  yup_ArrayBase.cpp  yup_Atomic.cpp  yup_Base64.cpp  yup_BigInteger.cpp  yup_BufferedInputStream.cpp  yup_CharacterFunctions.cpp  yup_ChildProcess.cpp  yup_ConsoleApplication.cpp  yup_DynamicLibrary.cpp  yup_DynamicObject.cpp  yup_ElementComparator.cpp  yup_EnumHelpers.cpp  yup_Enumerate.cpp  yup_Expression.cpp  yup_File.cpp  yup_FileInputStream.cpp  yup_FileSearchPath.cpp  yup_FixedSizeFunction.cpp  yup_FlagSet.cpp  yup_Functional.cpp  yup_GZIPCompressorOutputStream.cpp  yup_GZIPDecompressorInputStream.cpp  yup_HashMap.cpp  yup_HighResolutionTimer.cpp  yup_IPAddress.cpp  yup_Identifier.cpp  yup_InterProcessLock.cpp  yup_JSON.cpp  yup_JSONSerialisation.cpp  yup_JSONUtils.cpp  yup_JavascriptEngine.cpp  yup_LinkedListPointer.cpp  yup_ListenerList.cpp  yup_LocalisedStrings.cpp  yup_MACAddress.cpp  yup_MathFunctions.cpp  yup_MemoryInputStream.cpp  yup_MemoryMappedFile.cpp  yup_MemoryOutputStream.cpp  (+49 more)
tests/yup_data_model/: yup_CachedValue.cpp  yup_DataTree.cpp  yup_DataTreeObjectList.cpp  yup_DataTreeQuery.cpp  yup_DataTreeSchema.cpp  yup_UndoManager.cpp
tests/yup_dsp/: yup_BasicFilters.cpp  yup_BesselFilter.cpp  yup_Biquad.cpp  yup_BiquadCascade.cpp  yup_BiquadFilter.cpp  yup_ButterworthFilter.cpp  yup_ChebyshevFilter.cpp  yup_DcFilter.cpp  yup_DirectFIR.cpp  yup_EllipticFilter.cpp  yup_FFTProcessor.cpp  yup_FilterDesigner.cpp  yup_FirFilter.cpp  yup_FirstOrderFilter.cpp  yup_KorgMs20.cpp  yup_LinkwitzRileyFilter.cpp  yup_MoogLadder.cpp  yup_NoiseGenerators.cpp  yup_NotchFilter.cpp  yup_ParametricFilter.cpp  yup_PartitionedConvolver.cpp  yup_RbjFilter.cpp  yup_SoftClipper.cpp  yup_SpectrumAnalyzerState.cpp  yup_StateVariableFilter.cpp  yup_Tb303Filter.cpp  yup_VirtualAnalogSvf.cpp  yup_WindowFunctions.cpp
tests/yup_events/: yup_MessageManager.cpp  yup_Timer.cpp
tests/yup_graphics/: yup_AffineTransform.cpp  yup_Color.cpp  (+12 more)
(+1757 files in other folders)
