[build-system]
requires = [
    # c++ building
    #"cmake>=3.28",
    # pyi generation
    "mypy",
    # unit tests (for code coverage cmake target)
    "pytest",
    #"numpy",
    #"imageio",
    # defaults
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.cibuildwheel]
build-verbosity = 3
test-requires = "pytest" # mypy numpy imageio
test-command = "pytest -s {project}/python/tests -vvv"
manylinux-i686-image = "manylinux_2_28"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.windows]
environment = { "CMAKE_GENERATOR" = "Visual Studio 17 2022", "CMAKE_CXX_STANDARD" = "20" }

[tool.cibuildwheel.linux]
before-build = [
    """dnf install -y zlib-devel openssl-devel freetype-devel fontconfig-devel freeglut-devel alsa-lib-devel mesa-libGL-devel \
         xorg-x11-proto-devel xorg-x11-proto-devel libcurl-devel libpng-devel libX11-devel libXcursor-devel libXrandr-devel \
         libXinerama-devel libXrender-devel libXcomposite-devel libXinerama-devel libXcursor-devel xorg-x11-server-Xvfb \
         gtk3-devel webkit2gtk3-devel wget""",
]

test-command = [
    "xvfb-run -a -s \"-screen 0 1024x768x24\" pytest -s {project}/python/tests -vvv"
#    """xvfb-run -a -s \"-screen 0 1024x768x24\" pytest -s {project}/python/tests || \
#        { (mkdir -p /output/compare_data && cp {project}/python/tests/compare_data/* /output/compare_data/) ; exit 1 ; }"""
]
